[package]
name = "rusty-dtw"
version = "0.1.0"
authors = ["Christopher Fleetwood <fleetwoodpersonal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"

[dev-dependencies]
criterion = "0.3.4"


[[bench]]
name = "my_benchmark"
harness = false