[package]
name = "rusty-dtw"
version = "0.1.0"
authors = ["Christopher Fleetwood <fleetwoodpersonal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
num_cpus = "1.13.0"
rayon = "1.5.0"

[dev-dependencies]
criterion = "0.3.4"


[[bench]]
name = "my_benchmark"
harness = false