[build-system]
build-backend = "maturin"

[tool.poetry]
name = "rust-dtw"
version = "0.1.11"
description = "A rust implementation of dynamic time warping with python bindings!"
license = "MIT"
readme = "README.md"
repository = "https://github.com/FL33TW00D/rustDTW"
keywords = ["dtw", "timeseries", "neuroimaging"]
authors = ["Christopher Fleetwood"]

[tool.poetry.dependencies]
numpy = ">=1.18"
python = ">=3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
maturin = "==0.10.6"
